# xalwart.orm

./: .dockerignore  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build_and_test.yml  ci.yml  test.yml  tests-clang-alpine.yml  tests-clang-ubuntu.yml  tests-clang.yml  tests-gcc-alpine.yml  tests-gnuc.yml
docker/alpine/: clang.Dockerfile  gcc.Dockerfile
scripts/: get_database_build_options.sh
scripts/linux/: build.sh  test.sh
src/: CMakeLists.txt  _def_.h  abc.h  backend.cpp  backend.h  client.cpp  client.h  driver.cpp  driver.h  exceptions.h  interfaces.h  meta.h  model.cpp  model.h  operators.h  q.h  repository.cpp  repository.h  sql_builder.cpp  sql_builder.h  sql_driver.h  transaction.cpp  transaction.h  utility.cpp  utility.h
src/config/: _def_.h  yaml.cpp  yaml.h
src/db/: _def_.h  abc.h  executor.cpp  executor.h  interfaces.h  meta.h  migration.cpp  migration.h  model.h  recorder.cpp  recorder.h  schema_editor.cpp  schema_editor.h  state.cpp  state.h  states.h  utility.h
src/db/models/: _def_.h  migration.h
src/db/operations/: _def_.h  add_column.cpp  add_column.h  alter_column.cpp  alter_column.h  base.h  create_table.cpp  create_table.h  drop_column.cpp  drop_column.h  drop_table.cpp  drop_table.h  rename_column.cpp  rename_column.h  rename_table.cpp  rename_table.h  table.cpp  table.h
src/postgresql/: _def_.h  backend.cpp  backend.h  connection.cpp  connection.h  credentials.cpp  credentials.h  schema_editor.cpp  schema_editor.h
src/postgresql/config/: yaml.cpp  yaml.h
src/queries/: _def_.h  abstract_query.h  conditions.h  delete.h  functions.h  insert.h  operations.h  select.h  update.h  utility.h
src/query/: insert.h  operations.h  select.h
src/sqlite3/: _def_.h  backend.cpp  backend.h  connection.cpp  connection.h  driver.cpp  driver.h  query.cpp  query.h  schema_editor.cpp  schema_editor.h
src/sqlite3/config/: yaml.cpp  yaml.h
tests/: CMakeLists.txt  main.cpp  tests_driver.cpp  tests_meta.cpp  tests_model.cpp  tests_operators.cpp  tests_sql_builder.cpp  tests_utility.cpp
tests/db/: tests_meta.cpp  tests_model.cpp
tests/exceptions/: main.cpp  sql_error.cpp  tests_mode_error.cpp  tests_query_error.cpp  tests_sql_error.cpp
tests/queries/: main.cpp  mocked_backend.h  mocked_driver.h  tests_conditions.cpp  tests_delete.cpp  tests_insert.cpp  tests_operations.cpp  tests_select.cpp  tests_update.cpp
tests/query/: tests_operations.cpp
